--- a/TugasPertemuan4[41155050210015].md
+++ b/TugasPertemuan4[41155050210015].md
@@ -10,22 +10,27 @@ b.	Pengenalan Naive Bayes Classification
     ![image](https://github.com/user-attachments/assets/8cfd3aa7-fd79-4409-846c-fa2b2b631065)
 
 c.	Pengenalan Prior Probability
-    
+    ![image](https://github.com/user-attachments/assets/ad5567d5-aeb1-4241-ba07-9fdc2d08ca89)
+
 d.	Pengenalan Likelihood
-    
+    ![image](https://github.com/user-attachments/assets/46ee37a5-afca-4faa-9e19-15a05422c00e)
+
 e.	Pengenalan Evidence | Normalizer
-    
+    ![image](https://github.com/user-attachments/assets/1dc596ea-4fa3-4142-987e-0dde9b3249af)
+
 f.	Pengenalan Posterior Probability
- 
+    ![image](https://github.com/user-attachments/assets/eb25b597-8740-4333-8edb-7617ea53df4d)
+
 g.	Studi kasus Naive Bayes Classification
- 
- 
-
-
+    ![image](https://github.com/user-attachments/assets/ce114314-8d91-431f-b08c-660764ac8953)
+    ![image](https://github.com/user-attachments/assets/d7aa40dd-da6e-4fb2-84bf-9dfcf3a1a286)
 
 h.	Penjelasan Algoritma yang Naive
- 
+    ![image](https://github.com/user-attachments/assets/84024117-7256-44fb-acea-1ddd682c88dc)
+
 i.	Persiapan Dataset | Wisconsin Breast Cancer Dataset | UCI Machine Learning
- 
- 
+    ![image](https://github.com/user-attachments/assets/7a4a333a-d2a2-423d-97ad-dfdd8fa33e2b)
+    ![image](https://github.com/user-attachments/assets/13718f39-a215-4f84-a466-22ce08b3813a)
+
 j.	Implementasi Naive Bayes Classification dengan Scikit-Learn
+    ![image](https://github.com/user-attachments/assets/0039da88-0200-484a-8e6d-bee9cb0f51b5)
